plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'application'
}

group = 'com.messconnect'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

application {
	mainClass = 'com.messconnect.api.MessconnectApiApplication'
}

springBoot {
	mainClass = 'com.messconnect.api.MessconnectApiApplication'
}


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.google.firebase:firebase-admin:9.10.0'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaExec).configureEach {
	jvmArgs += [
		'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
		'--add-opens', 'java.base/java.util=ALL-UNNAMED'
	]
}
